add variable support; add variable operation window; fix some RPN bugs.

--- a/SimpleCalculator/SimpleCalculator.vcxproj
+++ b/SimpleCalculator/SimpleCalculator.vcxproj
@@ -122,6 +122,9 @@
     <ClCompile Include="SinExpression.cpp" />
     <ClCompile Include="TanExpression.cpp" />
     <ClCompile Include="Util.cpp" />
+    <ClCompile Include="VariableExpression.cpp" />
+    <ClCompile Include="VariableMgr.cpp" />
+    <ClCompile Include="VariableWindow.cpp" />
     <ClCompile Include="VerticalExpressionBase.cpp" />
     <ClCompile Include="VisualMgr.cpp" />
   </ItemGroup>
@@ -162,6 +165,14 @@
     <ClInclude Include="TanExpression.h" />
     <ClInclude Include="Util.h" />
     <ClInclude Include="ValidateResult.h" />
+    <ClInclude Include="VariableExpression.h" />
+    <ClInclude Include="VariableMgr.h" />
+    <QtMoc Include="VariableWindow.h">
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB</Define>
+      <IncludePath Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName)\.;$(QTDIR)\include\QtCore;$(QTDIR)\include\QtGui;$(QTDIR)\include\QtANGLE;$(QTDIR)\include\QtWidgets</IncludePath>
+      <Define Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">UNICODE;_UNICODE;WIN32;WIN64;QT_DLL;QT_NO_DEBUG;NDEBUG;QT_CORE_LIB;QT_GUI_LIB;QT_WIDGETS_LIB</Define>
+    </QtMoc>
     <ClInclude Include="VerticalExpressionBase.h" />
     <ClInclude Include="VisualMgr.h" />
     <QtMoc Include="KeyboardButton.h">
